feat: Add csproj metadata.

--- a/src/Snake.OpenGL/Snake.OpenGL.csproj
+++ b/src/Snake.OpenGL/Snake.OpenGL.csproj
@@ -10,6 +10,10 @@
 	<PropertyGroup>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<ApplicationIcon>Icon.ico</ApplicationIcon>
+		<Authors>Jean-Philippe Lévesque</Authors>
+		<PackageProjectUrl>https://github.com/jeanplevesque/Snake</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/jeanplevesque/Snake</RepositoryUrl>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="Icon.ico" />
@@ -18,6 +22,12 @@
 	<ItemGroup>
 		<EmbeddedResource Include="Icon.ico" />
 		<EmbeddedResource Include="Icon.bmp" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="..\..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
